[build-system]
requires = ["setuptools", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "geostats"
version = "1.0.0"
description = "A suite of geostatistical tools."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "A. Renmin Pretell Ductram"}]

dependencies = [
	"numpy",
	"Cython",
	"vincenty",
]
keywords = ["geostats"]
classifiers=[
	"Programming Language :: Python",
	"Programming Language :: Cython",
	"Programming Language :: Python :: 3",
]
